<resources>
    <string name="app_name">Weather App</string>
    <string name="action_name">City Weather</string>
    <string name="data_url">http://api.wunderground.com/api/9ae0e4077f38595e/hourly/q/state_name/city_name.json</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="submit_button">Submit</string>
    <string name="fav_title">Favourites</string>
    <string name="hint_noFavList">There is no city in your Favorites</string>
    <string name="toast_noCityName">Enter valid City name</string>
    <string name="toast_noStateName">Enter valid State name</string>
    <string name="toast_noRecordFound">No cities match your query</string>
    <string name="toast_recordDeleted">City Deleted</string>
    <string name="cityWeather_title">HOURLY DATA</string>
    <string name="cityWeather_curLoc">Current Location: </string>
    <string name="cityWeather_progressDialog">Loading Hourly Data</string>
    <string name="fav_add">Add to Favorites</string>
    <string name="fav_added">Added to Favorites</string>
    <string name="fav_updated">Updated Favorites Record</string>
    <string name="loc_details">Current Location: </string>
    <string name="progress_message">Loading Hourly Data</string>
    <string name="detail_title">City Weather</string>
    <string name="detail_minTemperature">Min Temperature: </string>
    <string name="detail_maxTemperature">Max Temperature: </string>
    <string name="detail_feelsLike">Feels Like: </string>
    <string name="detail_humidity">Humidity: </string>
    <string name="detail_dewPoint">Dew Point: </string>
    <string name="detail_pressure">Pressure: </string>
    <string name="detail_clouds">Clouds: </string>
    <string name="detail_winds">Winds: </string>
    <string name="noConnection">No Internet Connection </string>
    <string name="fav_updatedLabel">Updated On: </string>
</resources>
