<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.navanee.weatherupdate.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cityName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="false"
        android:hint="@string/hint_city"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stateName"
        android:layout_below="@+id/cityName"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_state"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:id="@+id/submitBtn"
        android:layout_below="@+id/stateName"
        android:layout_centerHorizontal="true"
        android:paddingLeft="50dp"
        android:paddingRight="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/submitBtn"
        android:id="@+id/noFavListLayout"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/hint_noFavList"
                android:id="@+id/noFavListHint"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18sp"
                android:gravity="center_vertical" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/submitBtn"
        android:id="@+id/favListLayout"
        android:visibility="visible"
        android:layout_toEndOf="@+id/noFavListLayout"
        android:layout_toRightOf="@+id/noFavListLayout"
        android:paddingEnd="0dp"
        android:paddingStart="0dp"
        android:layout_margin="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:padding="0dp"
        android:paddingBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/fav_title"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/favListView"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</RelativeLayout>
