<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forecast"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    tools:context="com.example.navanee.weatherupdate.Forecast">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="20dp"
        android:id="@+id/relativeLayout">

        <TextView
            android:text="@string/loc_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:id="@+id/textView5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            tools:text="@string/loc_details"
            android:textSize="16sp"
            android:paddingLeft="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/locationDetails"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/textView5"
            android:layout_toEndOf="@+id/textView5"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingLeft="5dp" />

    </RelativeLayout>

    <TableRow
        android:id="@+id/line1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#0e0f0f"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/relativeLayout">
    </TableRow>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/cloudImageView"
        android:maxHeight="150dp"
        android:maxWidth="150dp"
        android:layout_below="@+id/line1"
        android:layout_centerHorizontal="true"
        android:minHeight="150dp"
        android:minWidth="150dp" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/temperatureView"
        android:layout_below="@+id/cloudImageView"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="48sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="20dp"
        android:id="@+id/relativeLayout2"
        android:layout_below="@+id/relativeLayout3"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/minTempVal"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/textViewMin"
            android:layout_toEndOf="@+id/textViewMin"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:text="@string/detail_minTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewMin"
            tools:text="@string/detail_minTemperature"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="75dp"
            android:layout_marginStart="75dp"
            android:width="140dp"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="20dp"
        android:id="@+id/relativeLayout3"
        android:layout_below="@+id/cloudView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/maxTempVal"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/textViewMax"
            android:layout_toEndOf="@+id/textViewMax"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:text="@string/detail_maxTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewMax"
            tools:text="@string/detail_maxTemperature"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="75dp"
            android:layout_marginStart="75dp"
            android:width="140dp"
            android:textSize="16sp" />

    </RelativeLayout>

    <TableRow
        android:id="@+id/line2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#0e0f0f"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/relativeLayout2">
    </TableRow>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="20dp"
        android:id="@+id/relativeLayout4"
        android:layout_below="@+id/line2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/feelsLikeVal"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/textViewFeelsLike"
            android:layout_toEndOf="@+id/textViewFeelsLike"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:text="@string/detail_feelsLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewFeelsLike"
            tools:text="@string/detail_feelsLike"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="75dp"
            android:layout_marginStart="75dp"
            android:width="140dp"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="20dp"
        android:id="@+id/relativeLayout5"
        android:layout_below="@+id/relativeLayout4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/humidityVal"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/textViewHumidity"
            android:layout_toEndOf="@+id/textViewHumidity"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:text="@string/detail_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewHumidity"
            tools:text="@string/detail_humidity"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="75dp"
            android:layout_marginStart="75dp"
            android:width="140dp"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="20dp"
        android:id="@+id/relativeLayout6"
        android:layout_below="@+id/relativeLayout5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dewPointVal"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/textViewDewPoint"
            android:layout_toEndOf="@+id/textViewDewPoint"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:text="@string/detail_dewPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewDewPoint"
            tools:text="@string/detail_dewPoint"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="75dp"
            android:layout_marginStart="75dp"
            android:width="140dp"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="20dp"
        android:id="@+id/relativeLayout7"
        android:layout_below="@+id/relativeLayout6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pressureVal"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/textViewPressure"
            android:layout_toEndOf="@+id/textViewPressure"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:text="@string/detail_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPressure"
            tools:text="@string/detail_pressure"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="75dp"
            android:layout_marginStart="75dp"
            android:width="140dp"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="20dp"
        android:id="@+id/relativeLayout8"
        android:layout_below="@+id/relativeLayout7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cloudsVal"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/textViewClouds"
            android:layout_toEndOf="@+id/textViewClouds"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:text="@string/detail_clouds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewClouds"
            tools:text="@string/detail_clouds"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="75dp"
            android:layout_marginStart="75dp"
            android:width="140dp"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="20dp"
        android:id="@+id/relativeLayout9"
        android:layout_below="@+id/relativeLayout8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/windsVal"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/textViewWinds"
            android:layout_toEndOf="@+id/textViewWinds"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:text="@string/detail_winds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewWinds"
            tools:text="@string/detail_winds"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="75dp"
            android:layout_marginStart="75dp"
            android:width="140dp"
            android:textSize="16sp" />

    </RelativeLayout>

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cloudView"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="18sp"
        android:layout_below="@+id/temperatureView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
